--- a/portfolioPessoal/package.json
+++ b/portfolioPessoal/package.json
@@ -27,6 +27,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
+    "ngx-bootstrap": "^6.2.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
